--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <figure class="banner__container">
                 <img Srcset="images/ADW-banner640px-04.png 640px images/ADW-banner768vw-04.png 768px images/ADW-banner100vw-03.png 1200px "
                     Sizes="(max-width: 640px) 640px, (max-width: 768px) 768px, 1200px "
-                    Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere" class="banner">
+                    Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere">
             </figure>
 
         </header>
@@ -174,47 +174,60 @@
 
         </div>
         <!-- ---------- BANNER ---------- -->
-        <div class=" presentation banniere parallax flex--space__around">
-            <div class="presentation--services">
-                <!-- <h2>Réaliser votre site internet avec un professionnel</h2> -->
-                <h2>Infographisme</h2>
-                <h3>Photoshop</h3>
-                <ul>
-                    <li>Format: jpg, png, gif</li>
-                    <li>Retouche photo</li>
-                    <li>Moodboard</li>
-                    <li>Carte de visite</li>
-                </ul>
-                <h3>Illustrator</h3>
-                <ul>
-                    <li>logo</li>
-                    <li>Affiche</li>
-                    <li>Flyers</li>
-                    <li>Banner</li>
-                </ul>
-                <h3>Des illustrations pour rendre jolie votre site internet</h3>
-            </div>
-            <div class="presentation--services" data-aos="fade-left">
-                <h2>Création de site internet</h2>
+        <div class=" presentation parallax flex--column">
+            <div class="presentation-conteneur flex--space__around">
+                <article class="presentation--services">
+                    <!-- <h2>Réaliser votre site internet avec un professionnel</h2> -->
+                    <h2>Infographisme</h2>
+                    <h3>Photoshop</h3>
+                    <ul>
+                        <li>Format: jpg, png, gif</li>
+                        <li>Retouche photo</li>
+                        <li>Moodboard</li>
+                        <li>Carte de visite</li>
+                    </ul>
+                    <h3>Illustrator</h3>
+                    <ul>
+                        <li>logo</li>
+                        <li>Affiche</li>
+                        <li>Flyers</li>
+                        <li>Banner</li>
+                    </ul>
+                    <h3>Des illustrations pour rendre jolie votre site internet</h3>
+                </article>
+                <article class="presentation--services" data-aos="fade-left">
+                    <h2>Création de site internet</h2>
 
-                <h3>Projet web</h3>
-                <p>
-                    Conception d'un site internet<br>
-                </p>
-                <h3>Charte Graphique</h3>
-                <p>
-                    Identité visuelle<br>
-                </p>
-                <h3>CMS : WordPress</h3>
-                <p>
-                    Création d'un site web à l'aide d'un logiciel<br>
-                </p>
-                <h3>Developpement web</h3>
-                <p>
-                    Création d'un site web avec du code html, css et intégration javascript<br>
-                </p>
-                <h3>Un site prêt pour votre visibilité</h3>
+                    <h3>Projet web</h3>
+                    <p>
+                        Conception d'un site internet<br>
+                    </p>
+                    <h3>Charte Graphique</h3>
+                    <p>
+                        Identité visuelle<br>
+                    </p>
+                    <h3>CMS : WordPress</h3>
+                    <p>
+                        Création d'un site web à l'aide d'un logiciel<br>
+                    </p>
+                    <h3>Developpement web</h3>
+                    <p>
+                        Création d'un site web avec du code html, css et intégration javascript<br>
+                    </p>
+                    <h3>Un site prêt pour votre visibilité</h3>
+                </article>
             </div>
+            <div class="presentation-texte">
+                <article class="presentation-texte01">
+                    <h2></h2>
+                    <p></p>
+                </article>
+                <article class="presentation-texte01">
+                    <h2></h2>
+                    <p></p>
+                </article>
+            </div>
+
         </div>
         <!--	Main -->
         <main>
