--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- google font et icônes -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
@@ -218,11 +216,11 @@
                 </article>
             </div>
             <div class="presentation-texte">
-                <article class="presentation-texte01">
+                <article class="presentation-illustration">
                     <h2></h2>
                     <p></p>
                 </article>
-                <article class="presentation-texte01">
+                <article class="presentation-illustration">
                     <h2></h2>
                     <p></p>
                 </article>
@@ -235,35 +233,35 @@
                 <div class="section__haut">
                     <!-- Illustration Construction de l'identité graphique -->
                     <section id="section-1__haut">
-
                         <div class="cont--art__haut flex--row">
-                            <article class="carte art--haut">
-                                <h3>Carte de visite</h3>
+                            <article class="art--haut">
+                                <h3>Papéteire</h3>
                                 <figure>
                                     <img src="realisation/imgPhotoshopADW/businessCardRecto.jpg" alt="">
                                 </figure>
                                 <p>
-                                    Papéterie:
-                                    Cartes de visite - Enveloppes personnalisées - Entête et filigrane de feuille
+                                    Cartes de visite - <br>
+                                    Enveloppes - <br>
+                                    Entête et filigrane -
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
-                            <article class="carte art--haut">
+                            <article class="art--haut">
                                 <h3>Affiche</h3>
                                 <figure>
                                     <img src="realisation/imgPhotoshopADW/Afficche.png" alt="">
                                 </figure>
                                 <p>
-                                    Pour promouvoir un produit, un événement, une conférence
-                                    nous réalisons des affiches impactantes et qui toucheraient un large public.
+                                    Pour promouvoir un produit, un événement 
+                                    nous réalisons des affiches impactantes.
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
 
                         </div>
 
-                        <div class="cont--art__hau flex--row">
-                            <article class="carte art--haut">
+                        <div class="cont--art__haut flex--row">
+                            <article class="art--haut">
                                 <h3>Logo</h3>
                                 <figure>
                                     <img src="realisation/imgIllustratorADW/logos/Logo_Original.png" alt="">
@@ -273,7 +271,7 @@
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
-                            <article class="carte art--haut">
+                            <article class="art--haut">
                                 <h3>Montage image</h3>
                                 <figure>
                                     <img src="realisation/imgPhotoshopADW/ciel-etoilesMultipleSrc.jpg" alt="">
@@ -290,34 +288,31 @@
                     </section>
                     <!-- Le travail de DESIGN WEB -->
                     <section id="section-2__haut">
-                        <div class="cont--art__haut">
-
-                            <article class="carte art--haut">
+                        <div class="cont--art__haut flex--row">
+                            <article class="art--haut">
                                 <h3>UI - UI</h3>
                                 <figure>
                                     <img src="images/uiux.jpg" alt="">
                                 </figure>
                                 <p>
                                     Un dessin de votre site
-                                    avec la définition de l'endroit et du style de chaque élément de votre site
+                                    avec la définition de l'endroit et du style de chaque élément
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
-                            <article class="carte art--haut">
+                            <article class="art--haut">
                                 <h3>Prototypage</h3>
                                 <figure>
-                                    <img src="images/prototypage.png" alt="">
+                                    <img src="images/prototype01.jpg" alt="">
                                 </figure>
                                 <p>
-                                    La maquette finale de votre site confection soit avec Xd ou Figma
-                                    Ici nous réalisons votre site entièr avant de l'encoder
+                                    La maquette finale et de votre site avant d'être encoder
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
                         </div>
-                        <div class="cont--art__haut">
-
-                            <article class="carte art--haut">
+                        <div class="cont--art__haut flex--row">
+                            <article class="art--haut">
                                 <h3>Création du site CMS</h3>
                                 <figure>
                                     <img src="images/cmsWordPress.jpg" alt="">
@@ -327,10 +322,10 @@
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
                             </article>
-                            <article class="carte art--haut">
+                            <article class="art--haut">
                                 <h3>Devellopement web code</h3>
                                 <figure>
-                                    <img src="" alt="">
+                                    <img src="images/dewweb01.jpg" alt="">
                                 </figure>
                                 <p>
                                     Votre Site est crée entièement en code html, css, javascript, ...
