--- a/index.html
+++ b/index.html
@@ -45,12 +45,17 @@
     <div class="global flex--column">
         <!-- ---------- HEADER ---------- -->
         <header>
-            <figure class="banner__container">
+            <!-- <figure class="banner__container">
                 <img Srcset="images/ADW-banner640px-04.png 640px images/ADW-banner768vw-04.png 768px images/ADW-banner100vw-03.png 1200px "
                     Sizes="(max-width: 640px) 640px, (max-width: 768px) 768px, 1200px "
                     Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere">
-            </figure>
+            </figure> -->
 
+            <figure>
+                <img src="images/adw-logoSite.svg" alt="">
+            </figure>
+            <h1>ARCHITECTE . DESIGNER . WEB</h1>
+            
         </header>
         <!-- --------- NAVIGATION ----- -->
         <div class="navigation">
@@ -519,25 +524,22 @@
                         <i class="fa-brands fa-linkedin"></i>LinkedIn
                     </a>
                 </div>
-
-                <!-- mentions legales  -->
-                <div class="mentions flex--row">
-                    <a href="#" class="foot--timer__adw">ADW Tech 2023</a>
-                    <!-- <a href="">
-                        <p>terms conditions d'utilisations</p>
-                    </a> -->
-                    <a href="mentionsLegales.html" class="mentions-pages">
-                        mentions légales
-                    </a>
-                    <!-- <a href="">
-                        <p>all rights reserved</p>
-                    </a> -->
-                </div>
             </section>
 
-            <section class="footer-nav">
-
-            </section>
+            
+            <!-- mentions legales  -->
+            <div class="mentions flex--row">
+                <a href="#" class="foot--timer__adw">ADW Tech 2023</a>
+                <!-- <a href="">
+                    <p>terms conditions d'utilisations</p>
+                </a> -->
+                <a href="mentionsLegales.html" class="mentions-pages">
+                    mentions légales
+                </a>
+                <!-- <a href="">
+                    <p>all rights reserved</p>
+                </a> -->
+            </div>
         </footer>
     </div>
     <script type="text/javascript" src="js/javascript.js">
