--- a/faq.html
+++ b/faq.html
@@ -89,19 +89,20 @@
     </div>
     <div class="global flex--column">
          <!-- ---------- HEADER ---------- -->
-         <header>
-            <!-- <figure class="logo__container">
-                <img src="images/adw-logo.svg" alt="Developpeur Designer Web" class="logo" width="100%" height="auto">
-            </figure> -->
-            <figure class="banner__container">
+        <header>
+            <!-- <figure class="banner__container">
                 <img Srcset="images/ADW-banner640px-04.png 640px images/ADW-banner768vw-04.png 768px images/ADW-banner100vw-03.png 1200px "
                     Sizes="(max-width: 640px) 640px, (max-width: 768px) 768px, 1200px "
-                    Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere" class="banner">
-
+                    Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere">
+            </figure> -->
+            <figure class="logo">
+                <img src="images/adw-logoSite.svg" alt="">
             </figure>
-            
-            <figcaption class="avatar__nom">ADW - ARCHITECTURE . DESIGNER . WEB</figcaption>
-           
+
+            <figure class="header--deco">
+                <img src="images/ADW-deco-Header.png" alt="">
+            </figure>
+
         </header>
 
 
