--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
                     Sizes="(max-width: 640px) 640px, (max-width: 768px) 768px, 1200px "
                     Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere">
             </figure> -->
-
-            <figure>
+            <figure class="logo">
                 <img src="images/adw-logoSite.svg" alt="">
             </figure>
-            <h1>ARCHITECTE . DESIGNER . WEB</h1>
-            
+
+            <figure class="header--deco">
+                <img src="images/ADW-deco-Header.png" alt="">
+            </figure>
+
         </header>
         <!-- --------- NAVIGATION ----- -->
         <div class="navigation">
@@ -257,7 +259,7 @@
                                     <img src="realisation/imgPhotoshopADW/Afficche.png" alt="">
                                 </figure>
                                 <p>
-                                    Pour promouvoir un produit, un événement 
+                                    Pour promouvoir un produit, un événement
                                     nous réalisons des affiches impactantes.
                                 </p>
                                 <a href="realisation/uiux.html">Plus de détails...</a>
@@ -526,7 +528,7 @@
                 </div>
             </section>
 
-            
+
             <!-- mentions legales  -->
             <div class="mentions flex--row">
                 <a href="#" class="foot--timer__adw">ADW Tech 2023</a>
