--- a/photometrie.html
+++ b/photometrie.html
@@ -528,7 +528,7 @@
                             <p>1300 Wavre</p>
                             <a href="tel:+32 476 45 75 36">+32 476 45 75 36</a>
                             <a href="maito:info-adw@adw.com">info-adw@adw.com</a>
-                            <a href="https://www.adw.com">www.adw.com</a>
+                            <a href="https://lightaurore.github.io/ADW-Creatif/index.html">www.adw.com</a>
                         </div>
                     </div>
                     <div class="about card-info">
