--- a/cv.html
+++ b/cv.html
@@ -173,9 +173,7 @@
               </figure>
               <h3>Contact</h3>
               <div class="overlayText">
-                <p class="text">
-                  Pour plus d'information, Laissez nous un message.
-                </p>
+                <p class="text">Laissez nous un message.</p>
               </div>
             </a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
