--- a/about.html
+++ b/about.html
@@ -83,7 +83,10 @@
         <div class="nav-deco"></div>
         <div class="sub-nav">
           <span></span>
-          <nav class="sub-nav__menu myTopnav flex--row" id="topnav">
+          <nav
+            class="sub-nav__menu myTopnav breadcrumb flat flex--row"
+            id="topnav"
+          >
             <a href="index.html" class="container active">
               <figure class="overlayImg">
                 <!-- les icônes utilisées du sites flaticon (stickers) -->
@@ -112,9 +115,7 @@
               </figure>
               <h3>ADW</h3>
               <div class="overlayText">
-                <p class="text">
-                  L'histoire, les valeurs, les collaborateurs et notre travail
-                </p>
+                <p class="text">Objectifs, Valeurs, Collaborateurs</p>
               </div>
             </a>
 
@@ -130,7 +131,7 @@
               </figure>
               <h3>Gallerie</h3>
               <div class="overlayText">
-                <p class="text">Lorem ipsum dolor sit amet.</p>
+                <p class="text">Découvrez nos réalisations</p>
               </div>
             </a>
 
@@ -146,7 +147,7 @@
               </figure>
               <h3>Mon CV</h3>
               <div class="overlayText">
-                <p class="text">Lorem ipsum dolor sit amet.</p>
+                <p class="text">Mes formations et mes expériences</p>
               </div>
             </a>
             <a href="faq.html" class="container">
