--- a/contact.html
+++ b/contact.html
@@ -281,6 +281,7 @@
                 <p class="text">Objectifs, Valeurs, Collaborateurs</p>
               </div>
             </a>
+
             <a href="gallerie.html" class="container">
               <figure class="overlayImg">
                 <img
@@ -296,6 +297,7 @@
                 <p class="text">Découvrez nos réalisations</p>
               </div>
             </a>
+
             <a href="cv.html" class="container">
               <figure class="overlayImg">
                 <img
@@ -308,7 +310,7 @@
               </figure>
               <h3>Mon CV</h3>
               <div class="overlayText">
-                <p class="text">Découvrez mes formations et mes expériences</p>
+                <p class="text">Mes formations et mes expériences</p>
               </div>
             </a>
             <a href="faq.html" class="container">
