--- a/faq.html
+++ b/faq.html
@@ -184,7 +184,7 @@
               </figure>
               <h3>Mon CV</h3>
               <div class="overlayText">
-                <p class="text">Découvrez mes formations et mes expériences</p>
+                <p class="text">Mes formations et mes expériences</p>
               </div>
             </a>
             <a href="faq.html" class="container">
