--- a/photometrie.html
+++ b/photometrie.html
@@ -210,94 +210,115 @@
 
         </header>
 
+<!-- --------- NAVIGATION ----- -->
+<div class="navigation">
+    <div class="nav-deco"></div>
+    <div class="sub-nav">
+      <span></span>
+      <nav
+        class="sub-nav__menu myTopnav breadcrumb flat flex--row"
+        id="topnav"
+      >
+        <a href="index.html" class="container active">
+          <figure class="overlayImg">
+            <!-- les icônes utilisées du sites flaticon (stickers) -->
+            <img
+              src="images/ADW-home-icone.svg"
+              alt=""
+              class="nav--image"
+              width="100%"
+              height="auto"
+            />
+          </figure>
+          <h3>home</h3>
+          <div class="overlayText">
+            <p class="text">Notre page d'accueil</p>
+          </div>
+        </a>
+        <a href="about.html" class="container">
+          <figure class="overlayImg">
+            <img
+              src="images/ADW-about01-icone.svg"
+              alt=""
+              class="nav--image"
+              width="100%"
+              height="auto"
+            />
+          </figure>
+          <h3>ADW</h3>
+          <div class="overlayText">
+            <p class="text">Objectifs, Valeurs, Collaborateurs</p>
+          </div>
+        </a>
 
-        <!-- --------- NAVIGATION ----- -->
-        <div class="navigation">
-            <div class="nav-deco"></div>
-            <div class="sub-nav">
-                <span></span>
-                <nav class="sub-nav__menu myTopnav breadcrumb flat flex--row" id="topnav">
-                    <a href="index.html" class="container active">
-                        <figure class="overlayImg">
-                            <!-- les icônes utilisées du sites flaticon (stickers) -->
-                            <img src="images/ADW-home-icone.svg" alt="" class="nav--image" width="100%"
-                                height="auto">
-                        </figure>
-                        <h3>home</h3>
-                        <div class="overlayText">
-                            <p class="text">
-                                Notre page d'accueil
-                            </p>
-                        </div>
-                    </a>
-                    <a href="about.html" class="container">
-                        <figure class="overlayImg">
-                            <img src="images/ADW-about01-icone.svg" alt="" class="nav--image" width="100%"
-                                height="auto">
-                        </figure>
-                        <h3>ADW</h3>
-                        <div class="overlayText">
-                            <p class="text">
-                                Objectifs, Valeurs, Collaborateurs
-                            </p>
-                        </div>
-                    </a>
+        <a href="gallerie.html" class="container">
+          <figure class="overlayImg">
+            <img
+              src="images/ADW-gallerie-icone.svg"
+              alt=""
+              class="nav--image"
+              width="100%"
+              height="auto"
+            />
+          </figure>
+          <h3>Gallerie</h3>
+          <div class="overlayText">
+            <p class="text">Découvrez nos réalisations</p>
+          </div>
+        </a>
 
-                    <a href="gallerie.html" class="container">
-                        <figure class="overlayImg">
-                            <img src="images/ADW-gallerie-icone.svg" alt="" class="nav--image" width="100%" height="auto">
-                        </figure>
-                        <h3>Gallerie</h3>
-                        <div class="overlayText">
-                            <p class="text">
-                                Découvrez nos réalisations
-                            </p>
-                        </div>
-                    </a>
-
-                    <a href="cv.html" class="container">
-                        <figure class="overlayImg">
-                            <img src="images/ADW-cv-icone.svg" alt="" class="nav--image" width="100%" height="auto">
-                        </figure>
-                        <h3>Mon CV</h3>
-                        <div class="overlayText">
-                            <p class="text">
-                                Découvrez mes formations et mes expériences
-                            </p>
-                        </div>
-                    </a>
-                    <a href="faq.html" class="container">
-                        <figure class="overlayImg">
-                            <img src="images/ADW-faq-icone.svg" alt="" class="nav--image" width="100%"
-                                height="auto">
-                        </figure>
-                        <h3>Q & R</h3>
-                        <div class="overlayText">
-                            <p class="text">
-                                Questions fréquemment posées
-                            </p>
-                        </div>
-                    </a>
-                    <a href="contact.html" class="container">
-                        <figure class="overlayImg">
-                            <img src="images/ADW-contact-icone.svg" alt="" class="nav--image" width="100%"
-                                height="auto">
-                        </figure>
-                        <h3>Contact</h3>
-                        <div class="overlayText">
-                            <p class="text">
-                                Laissez nous un message.
-                            </p>
-                        </div>
-                    </a>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </nav>
-            </div>
-        </div>
-
-
+        <a href="cv.html" class="container">
+          <figure class="overlayImg">
+            <img
+              src="images/ADW-cv-icone.svg"
+              alt=""
+              class="nav--image"
+              width="100%"
+              height="auto"
+            />
+          </figure>
+          <h3>Mon CV</h3>
+          <div class="overlayText">
+            <p class="text">
+                Mes formations et mes expériences</p>
+          </div>
+        </a>
+        <a href="faq.html" class="container">
+          <figure class="overlayImg">
+            <img
+              src="images/ADW-faq-icone.svg"
+              alt=""
+              class="nav--image"
+              width="100%"
+              height="auto"
+            />
+          </figure>
+          <h3>Q & R</h3>
+          <div class="overlayText">
+            <p class="text">Questions fréquemment posées</p>
+          </div>
+        </a>
+        <a href="contact.html" class="container">
+          <figure class="overlayImg">
+            <img
+              src="images/ADW-contact-icone.svg"
+              alt=""
+              class="nav--image"
+              width="100%"
+              height="auto"
+            />
+          </figure>
+          <h3>Contact</h3>
+          <div class="overlayText">
+            <p class="text">Laissez nous un message.</p>
+          </div>
+        </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </nav>
+    </div>
+  </div>
 		<main class="photo">
 			<div class="appareil__photo">
 				<section class="appareil--section"></section>
