--- a/graphisme.html
+++ b/graphisme.html
@@ -144,7 +144,7 @@
               </figure>
               <h3>Mon CV</h3>
               <div class="overlayText">
-                <p class="text">Découvrez mes formations et mes expériences</p>
+                <p class="text">Mes formations et mes expériences</p>
               </div>
             </a>
             <a href="faq.html" class="container">
@@ -183,7 +183,6 @@
           </nav>
         </div>
       </div>
-
       <!-- Fil d'Ariane -->
 
       <!-- <div class="display" style="background-color: cyan; width: 100%;">
