--- a/contact.html
+++ b/contact.html
@@ -664,7 +664,7 @@
                 <p>1300 Wavre</p>
                 <a href="tel:+32 476 45 75 36">+32 476 45 75 36</a>
                 <a href="maito:info-adw@adw.com">info-adw@adw.com</a>
-                <a href="https://lightaurore.github.io/ADW-Creatif/index.html"
+                <a href="https://lightaurore.github.io/ADW-Creatif/"
                   >www.adw.com</a
                 >
               </div>
