--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     Sizes="(max-width: 640px) 640px, (max-width: 768px) 768px, 1200px "
                     Src="images/ADW-banner100vw-03.png" alt="ADW Developpeur Designer Web banniere">
             </figure> -->
-        <figure class="logo">
+        <a href="index.html" class="logo">
           <img src="images/adw-logoSite.svg" alt="" />
-        </figure>
+        </a>
 
         <figure class="header--deco">
           <img src="images/ADW-deco-Header.png" alt="" />
