--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       </div>
       <!-- ---------- BANNER ---------- -->
       <div class="presentation parallax flex--column">
-        <div class="presentation-conteneur flex--space__around">
+        <div class="presentation-conteneur flex--space__between">
           <article class="presentation--services">
             <!-- <h2>Réaliser votre site internet avec un professionnel</h2> -->
             <h2>Infographisme</h2>
@@ -256,7 +256,7 @@
             <h3>Un site prêt pour votre visibilité</h3>
           </article>
         </div>
-        <div class="presentation-texte flex--column">
+        <!-- <div class="presentation-texte flex--column">
           <article class="presentation-illustration">
             <h2></h2>
             <p></p>
@@ -265,7 +265,7 @@
             <h2></h2>
             <p></p>
           </article>
-        </div>
+        </div> -->
       </div>
       <!--	Main -->
       <main>
