--- a/gallerie.html
+++ b/gallerie.html
@@ -104,7 +104,9 @@
         background-color: bisque;
         margin: 12px;
       }
-
+      .img--ai a figure,
+      .img--ps a figure {
+      }
       section .images {
         width: 200px;
       }
