--- a/contact.html
+++ b/contact.html
@@ -633,7 +633,9 @@
                 </div>
                 <div class="lien--contact">
                   <img src="images/laptop.gif" alt="" /> :
-                  <a href="https://www.adw.com">www.adw.com</a>
+                  <a href="https://lightaurore.github.io/ADW-Creatif/"
+                    >www.adw.com</a
+                  >
                 </div>
               </address>
               <div class="map--adresse">
