--- a/cv.html
+++ b/cv.html
@@ -201,6 +201,9 @@
             <div class="job-03">
               <div>Designer Web et WordPress</div>
             </div>
+            <div class="job-01">
+              <div>UX UI Designer</div>
+            </div>
           </section>
         </div>
       </div>
